k8s/overlays/megastore-lol/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mega-store
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - megastore.lol
        - www.megastore.lol
      secretName: megastore-lol-tls
  rules:
    - host: megastore.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mega-store
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mega-store-www-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://megastore.lol
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.megastore.lol
      secretName: megastore-lol-tls
  rules:
    - host: www.megastore.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mega-store
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mega-store-commerce
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - megastore.lol
      secretName: megastore-lol-tls
  rules:
    - host: megastore.lol
      http:
        paths:
          - path: /api/commerce(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: commerce-proxy
                port:
                  number: 8001
